style.css
@import url("https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap");

:root {
  /* ## Colors

### Primary */

  --Orange: hsl(26, 100%, 55%);
  --Paleorange: hsl(25, 100%, 94%);

  /* ### Neutral */

  --Veryvarkblue: hsl(220, 13%, 13%);
  --Darkgrayishblue: hsl(219, 9%, 45%);
  --Grayishblue: hsl(220, 14%, 75%);
  --Lightgrayishblue: hsl(223, 64%, 98%);
  --White: hsl(0, 0%, 100%);
  --Black: hsl(0, 0%, 0%);
  --LightBlack: rgba(0, 0, 0, 0.7);

  /* (with 75% opacity for
lightbox background) */

  /* ## Typography */

  /* ### Body Copy */

  --Fontsize-p: 16px;
  --p1: calc(0.9rem + 0.5vw);
  --p2: calc(0.7rem + 0.5vw);
  --h1: calc(2.3rem + 1vw);
  --h2: calc(1.3rem + 1vw);
  --h3: calc(1.2rem + 1vw);
  --gap-1: calc(2rem + 1vw);
  --gap-2: calc(1rem + 1vw);
  --image-width: calc(25rem + 5vw);
  --image-height: calc(20rem + 5vw);
  --image-width-light: calc(28rem + 5vw);
  --image-height-light: calc(23rem + 5vw);
  --profile-pic: calc(1.5rem + 2vw);
}

*,
*::before,
*::after {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-family: "Kumbh Sans", sans-serif;
}

/* .modal {
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100vh;
  z-index: 20;
  background-color: rgba(0, 0, 0, 0.8);
} */

html {
  font-size: 16px;
}

body {
  display: flex;
  /* min-height: 100vh;
  height: 100vh; */
  align-items: center;
  justify-content: center;
  flex-direction: column;
  overflow-y: auto;
}

button {
  border: none;
  outline: 0;
}

.container {
  width: 90vw;
  max-width: 1500px;
  height: 100%;
  padding: 1rem 2rem 0;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 3rem;
  margin-bottom: 1rem;
}

@media (max-width: 950px) {
  .container {
    width: 95vw;
  }
}

@media (max-width: 910px) {
  .container {
    width: 100vw;
  }
}

@media (max-width: 850px) {
  .container {
    padding: 1rem 1rem 0;
  }
}

@media (max-width: 610px) {
  .container {
    padding: 1rem 2rem 0;
    gap: 0;
  }
}

@media (max-width: 450px) {
  .container {
    padding: 1rem;
  }
}

.Header {
  display: flex;
  justify-content: space-between;
  width: 100%;
  border-bottom: 1px solid var(--Grayishblue);
  padding-bottom: 1rem;
  position: sticky;
  z-index: 10;
}

@media (max-width: 610px) {
  .Header {
    border-bottom: 0;
  }
}

.Nav {
  display: flex;
  gap: var(--gap-1);
  align-items: center;
  position: relative;
  z-index: 10;
}

@media (max-width: 450px) {
  .Nav {
    gap: 2rem;
  }
}

@media (max-width: 310px) {
  .Nav {
    gap: 1rem;
  }
}

.menu {
  display: none;
}

@media (max-width: 610px) {
  .menu {
    display: flex;
    align-items: center;
  }
}

.menu-icon {
  height: max-content;
}

.hasHover .menu-icon:hover {
  cursor: pointer;
}

.nav-list {
  display: flex;
  gap: var(--gap-2);
  list-style-type: none;
  align-items: flex-start;
  padding-bottom: 0.1rem;
}

@media (max-width: 610px) {
  .nav-list {
    display: none;
  }
}

.nav-links a {
  text-decoration: none;
  color: var(--LightBlack);
  padding-bottom: 1.9rem;
}

@media (max-width: 820px) {
  .nav-links a {
    padding-bottom: 1.7rem;
  }
}

.hasHover .nav-links a:hover,
.nav-links a:focus {
  font-weight: 700;
  border-bottom: 3px solid var(--Orange);
  color: black;
}

.cart {
  position: absolute;
  display: none;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  top: 120%;
  right: 0%;
  min-height: 150px;
  width: 350px;
  background-color: var(--White);
  box-shadow: -5px 5px 10px 0 rgba(0, 0, 0, 0.2),
    -15px 15px 25px rgba(0, 0, 0, 0.1);
  z-index: 20;
}

@media (max-width: 610px) {
  .cart {
    top: 150%;
    right: 150%;
    width: 300px;
    border-radius: 10px;
    justify-content: flex-start;
  }
}

@media (min-width: 1200px) {
  .cart {
    min-height: 250px;
    min-width: 400px;
  }
}

.cart.active {
  display: flex;
}

.cart.small-screen {
  display: none;
  top: 2rem;
  left: 50%;
  transform: translateX(-50%);
}

@media (max-width: 610px) {
  .cart.large-screen {
    display: none;
  }

  .cart.small-screen.active {
    display: flex;
  }
}

@media (max-width: 450px) {
  .cart.small-screen {
    top: 1.2rem;
    width: 70vw;
    height: calc(var(--image-height) * 0.9);
  }
}

@media (max-width: 425px) {
  .cart.small-screen {
    width: 75vw;
  }
}

@media (max-width: 375px) {
  .cart.small-screen {
    width: 80vw;
  }
}

@media (max-width: 350px) {
  .cart.small-screen {
    width: 85vw;
  }
}

@media (max-width: 325px) {
  .cart.small-screen {
    width: 90vw;
  }
}

@media (max-width: 310px) {
  .cart.small-screen {
    width: 95vw;
  }
}

@media (max-width: 290px) {
  .cart.small-screen {
    width: 100vw;
  }
}

.cart h3 {
  height: auto;
  display: block;
  width: 100%;
  padding: 1rem;
  border-bottom: 1px solid var(--Grayishblue);
}

.empty-cart {
  height: 100%;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.cart-items {
  min-height: 150px;
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 1rem;
}

/* #cart-items-small-screen {
  justify-content: flex-start;
  align-items: flex-start;
} */

.item-description {
  width: 100%;
  display: flex;
  flex-direction: column;
  gap: 1rem;
  margin-bottom: auto;
}

.cart-item-top {
  display: flex;
  gap: 0.75rem;
  justify-content: space-between;
  align-items: center;
}

@media (min-width: 1450px) {
  .cart-item-top {
    gap: 0.6rem;
  }
}

@media (max-width: 275px) {
  .cart.small-screen .cart-item-top {
    justify-content: center;
    gap: 0.5rem;
  }
}

@media (max-width: 260px) {
  .cart.small-screen .cart-item-top {
    justify-content: space-between;
    gap: 0.5rem;
  }
}

.item-image {
  height: 4rem;
  width: 4rem;
  background-size: 100% 100%;
  border-radius: 5px;
}

.new-item-text-content {
  color: var(--LightBlack);
  font-size: var(--p1);
}
/* ... */

